Fixed follow; fixed ban; almost finished photo upload
